--- a/03/list3.html
+++ b/03/list3.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>순서를 필요로 하는 리스트 ol</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
@@ -11,14 +12,16 @@
         프로그래밍 언어 목록
     </h3>
     <ol>
-        <li>
-            자바
+        <li> 자바 </li>
+        <li> 파이썬
+            <!--
+            <ol>
+                <li>파이썬 기초문법</li>
+                <li>파이썬 함수</li>
+            </ol>
+        -->
         </li>
-        <li>
-            파이썬
-        </li>
-        <li>
-            C
+        <li> C
             <ul>
                 <li>
                     C++
@@ -34,6 +37,7 @@
             </ul>
         </li>
     </ol>
+    <!-- <li>자식으로는 누구든 올 수 있으니 중첩리스트를 만들 때 <ol> <ul> 상관없이 넣을 수 있다. -->
 </body>
 
 </html>
