--- a/03/list4.html
+++ b/03/list4.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-    <h3>
-        순서가 있는 리스트
-    </h3>
+    <h3> 순서가 있는 리스트 </h3>
+    <!-- 타입을 직접 지정해서 사용할 수 있다. 당연히 css로 list-style-type을
+    수정할 수 있다. <ul>은 타입을 태그에서 지정하면 에러가 나지만, <ol>은 가능! -->
     <ol type="1">
         <li>
             첫 번째
