--- a/09/display_inline2.html
+++ b/09/display_inline2.html
@@ -1,32 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>inline의 속성 02</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="/09/css/display_inline2.css">
+
 </head>
 
 <body>
-    <style>
-        /* 빨강 정사각형 */
-        span {
-            width: 100px;
-            height: 100px;
-
-            background-color: red;
-            color: white;
-        }
-    </style>
-
-    <span>
-        정사각형
+    <span> 정사각형 </span>
+    <div>쁘락치</div>
+    <span> 하지만 폭과 높이가 설정되지 않는다
     </span>
-    <span>
-        하지만 폭과 높이가 설정되지 않는다
-    </span>
-    <span>
-        그래도 가로로 나열이 가능하다
-    </span>
+    <span> 그래도 가로로 나열이 가능하다 </span>
 </body>
 
 </html>
