--- a/09/display_inlineblock2.html
+++ b/09/display_inlineblock2.html
@@ -1,40 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>혼종 인라인블럭 02</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="/09/css/display_inlineblock2.css">
 </head>
 
 <body>
-    <style>
-        .box {
-            /* 인라인 블록 */
-            display: inline-block;
-
-            /* 정사각형 */
-            width: 100px;
-            height: 100px;
-
-            background-color: red;
-            color: white;
-
-            /* 폰트 사이즈 재설정 */
-            font-size: 16px;
-        }
-
-        * {
-            /* 폰트 사이즈 제거 */
-            font-size: 0;
-        }
-    </style>
-
-    <div class="box">
-        첫 번째
-    </div>
-    <div class="box">
-        두 번째
-    </div>
+    <div class="box"> 첫 번째 </div>
+    <div class="box"> 두 번째 </div>
 </body>
 
 </html>
