--- a/09/disply_block.html
+++ b/09/disply_block.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>block의 속성</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="/09/css/block.css">
 </head>
 
 <body>
-    <style>
-        /* 빨강 정사각형 */
-        div {
-            width: 100px;
-            height: 100px;
+    <!-- 모든 태그는 display속성이 기본값으로 설정되어 있다.
+    자주사용하는 많은 태그가 거의 display:block이라 생각하면 되고
+    차라리 inline요소를 외워서 구분하는것이 빠르다.
 
-            background-color: red;
-            color: white;
-        }
-    </style>
+    우리는 모든 태그에 css로 display 속성을 변경해서 사용할 수 있다.
 
-    <div>
-        정사각형
-    </div>
+    block의 특징은 가로 사이즈 상관 없이, 현재 위치한 가로 공간 모두
+    그 요소의 것이다. 피그마의 fill의 개념.
+    이 때문에 줄바꿈이 일어나는 것! -->
+    <div>정사각형</div>
     위가 가득 차있어서 아래로 내려와요
 </body>
 
