비디오 오디오 태그와 색정보 css구현

--- a/04/audio.html
+++ b/04/audio.html
@@ -9,13 +9,13 @@
 <body>
     <div>
         audio 태그가 있어요
-        <audio src="music.mp3"></audio>
+        <audio src="./99412B355CF6B93806.mp3"></audio>
     </div>
 
     <!-- 컨트롤러 추가 -->
     <div>
         audio 태그가 있어요
-        <audio controls src="music.mp3"></audio>
+        <audio controls src="./99412B355CF6B93806.mp3"></audio>
     </div>
 </body>
 
