--- a/06/line_height2.html
+++ b/06/line_height2.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>텍스트 행간 line-height 02</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
     <style>
         div {
             background: yellow;
             /* div 내의 모든 폰트 크기 40px */
             font-size: 40px;
             /* 문자의 높이를 150% 즉, font-size의 150%인 60px로 설정 */
-            line-height: 150%;
-            
-            /* line-height: 30px; 문자 높이를 font-size보다 작게 지정하면 안됨(주의) */
+            /* line-height: 150%; */
+
+            line-height: 30px;
+            /* 문자 높이를 font-size보다 작게 지정하면 안됨(주의) */
         }
     </style>
+</head>
 
+<body>
     <div>
         안녕하세요, 한글입니다. <br>
         Hello, I'm English. <br>
