--- a/06/web/font-face.html
+++ b/06/web/font-face.html
@@ -1,59 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>@font-face를 활용하여 로컬 폰트 적용하기</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="/06/web/css/font-face.css">
 </head>
 
 <body>
-    <style>
-        @font-face {
-            font-family: maru-buri;
-            font-weight: 200;
-            src: url('/fonts/MaruBuri-ExtraLight.ttf');
-        }
-
-        @font-face {
-            font-family: maru-buri;
-            font-weight: 300;
-            src: url('/fonts/MaruBuri-Light.ttf');
-        }
-
-        @font-face {
-            font-family: maru-buri;
-            src: url('/fonts/MaruBuri-Regular.ttf');
-        }
-
-        @font-face {
-            font-family: maru-buri;
-            font-weight: 600;
-            src: url('/fonts/MaruBuri-SemiBold.ttf');
-        }
-
-        @font-face {
-            font-family: maru-buri;
-            font-weight: 700;
-            src: url('/fonts/MaruBuri-Bold.ttf');
-        }
-
-        div {
-            font-family: maru-buri, sans-serif;
-        }
-
-        span {
-            font-family: maru-buri, sans-serif;
-            /* bold 와 동일 */
-            font-weight: 700;
-        }
-    </style>
-
-    <div>
-        평범한 마루부리
-    </div>
-    <span>
-        굵은 마루부리
-    </span>
+    <div> 평범한 마루부리 </div>
+    <span> 굵은 마루부리 </span>
 </body>
 
 </html>
