7단원 박스크기스타일 주석완료

--- a/07/box-height.html
+++ b/07/box-height.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>태그에 지정하는 높이</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
     <style>
         div {
             background: yellow;
@@ -14,7 +12,9 @@
             height: 100px;
         }
     </style>
+</head>
 
+<body>
     <!-- 높이 100px -->
     <div></div>
 </body>
