--- a/07/box-maxwidth.html
+++ b/07/box-maxwidth.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>태그에 지정하는 최대넓이</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
     <style>
         h3 {
             /* 최대 폭 700px */
@@ -17,7 +15,9 @@
             background: antiquewhite;
         }
     </style>
+</head>
 
+<body>
     <h3>
         중간 콘텐츠 중간 콘텐츠 중간 콘텐츠 중간 콘텐츠 중간 콘텐츠 중간 콘텐츠 중간 콘텐츠 중간 콘텐츠 중간 콘텐츠 중간 콘텐츠 중간 콘텐츠 중간 콘텐츠 중간 콘텐츠 중간 콘텐츠 중간 콘텐츠 중간 콘텐츠
     </h3>
