--- a/07/box-overflow.html
+++ b/07/box-overflow.html
@@ -1,41 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>overflow 01</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="/07/css/box-overflow01.css">
 </head>
 
 <body>
-    <style>
-        div {
-            /* 한 변이 40px인 사각형 */
-            width: 40px;
-            height: 40px;
-            /* 배경색 */
-            background: antiquewhite;
-            /* 벗어나도 보인다 */
-            overflow: visible;
-
-            /* overflow: hidden; 벗어나면 숨긴다 */
-        }
-
-        /* 자식 요소 추가
-        h1{
-            width: 10px;
-            height: 100px;  높이는 부모를 초과하여 벗어난다
-            background: aquamarine;
-        } */
-    </style>
+    <div> 어떤 값이 올지 모르는 긴 콘텐츠 </div>
 
     <div>
-        어떤 값이 올지 모르는 긴 콘텐츠
+        <h1> </h1>
     </div>
-
-    <div>
-        <!-- <h1> </h1> -->
-    </div>
-
 </body>
 
 </html>
