--- a/07/box-overflow3.html
+++ b/07/box-overflow3.html
@@ -1,30 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>overflow 03</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="/07/css/box-overflow03.css">
 </head>
 
 <body>
-    <style>
-        h1 {
-            overflow: scroll;
-
-            /* overflow-y: scroll; 세로 스크롤 적용*/
-            
-            width: 100px;
-            height: 100px;
-        }
-
-        h2 {
-            overflow: scroll;
-            /* 가로로도 스크롤이 의미 있도록 */
-            white-space: nowrap;
-            width: 100px;
-            height: 100px;
-        }
-    </style>
     <div>
         가로 세로로 스크롤이 보이는 텍스트
     </div>
