백그라운드 속성 정리

--- a/07/background-image_gradient.html
+++ b/07/background-image_gradient.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>배경 이미지 그라디언트 background-image: linear-gradient() </title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <style>
+        div {
+            width: 150px;
+            height: 150px;
+            background-image: linear-gradient(red, blue);
+            /* 그레이디언트 배경, linear, radial 모두 사용가능 */
+        }
+    </style>
 </head>
 
 <body>
-    <style>
-        div {
-            /* 폭 150px */
-            width: 150px;
-            /* 높이 150px */
-            height: 150px;
-
-            background-image: linear-gradient(red, blue); /* 그레이디언트 배경 */
-        }
-    </style>
-
     <div> </div>
-
 </body>
 
 </html>
