--- a/07/background-image.html
+++ b/07/background-image.html
@@ -1,39 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>배경이미지 지정 background-image</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="/07/css/background-image.css">
 </head>
 
 <body>
-    <style>
-        div {
-            /* 폭 150px */
-            width: 150px;
-            /* 높이 150px */
-            height: 150px;
-
-            background-image: url(/07/images/ruby.jpg); /* 배경 이미지 */
-            /* background-image: url(/07/images/logo.svg); 투명한 배경 이미지 */
-            /* background-color: antiquewhite; 비교를 위한 배경색 설정  */
-            /* background-image: url(/07/images/ruby.jpg), url(/07/images/logo.svg); 두 개의 배경 이미지  */
-            /* background-image: url(/07/images/logo.svg), url(/07/images/ruby.jpg); 두 개의 배경 이미지 - 순서 바꿈 */
-            /* background-image: linear-gradient(red, blue); 그레이디언트 배경 */
-        }
-    </style>
-
-    <!-- <div>
+    <div>
         정말로 배경에 이미지가 생겼어요! <br>
         그래서 겹치기도 합니다. <br>
         너무 신기해요~
-    </div> -->
+    </div>
 
     <!-- <div>
         먼저 오는 이미지가 앞으로!
     </div> -->
 
-    <div> </div>
+    <!-- <div> </div> -->
 
 </body>
 
