--- a/07/background-size.html
+++ b/07/background-size.html
@@ -1,34 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>배경이미지 사이즈 background-size</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="/07/css/background-size.css">
 </head>
 
 <body>
-    <style>
-        div {
-            /* 폭 500px */
-            width: 500px;
-            /* 높이 300px */
-            height: 300px;
-            /* 배경 이미지 */
-
-            background-image: url(/07/images/logo.svg);
-            background-size: 100%; /* 값이 1개일 때는 요소의 폭에 맞춰짐 */ 
-
-            /* background-image: url(/07/images/ruby.jpg); */
-            /* background-size: 100% 100%;  배경 이미지가 요소에 딱 맞게 설정 */
-            /* background-size: contain;  배경 이미지가 요소에 딱 맞으며 비율이 유지되도록 설정 */
-            /* background-size: cover; 배경 이미지가 잘리더라도 요소를 가득 채우게 설정 */
-
-        }
-    </style>
-
-    <div>
-
-    </div>
+    <div> </div>
 </body>
 
 </html>
