--- a/07/border-color.html
+++ b/07/border-color.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>외곽선 색상 border-color</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <style>
+        div {
+            width: 500px;
+            height: 300px;
+
+            /* 4방향에 적용되는 실선 테두리 */
+            border: 10px double rgba(0, 0, 0, 0.5);
+
+            /* border-width:  5px solid #ddd; */
+            /* 두께만 선언해야하는 속성에 3종셋트 선언하면 안된다 */
+
+            /* border-color: #FF0000; */
+            /* border-width: 10px; */
+            /* border-style: solid; */
+            /* 선의 속성은 3가지로 이루어지며, 각 값에 원하는 것을 넣어 조합한다.
+            border: 두께 스타일 색상;의 선언의 순서는 상관없다.
+
+            두께나 색상만 선언을 하면 아무것도 안뜬다.
+            스타일만 선언하면 1px의 블랙으로 기본값 구성이 적용됨. */
+            /* border: solid; */
+        }
+    </style>
 </head>
 
 <body>
-    <style>
-        div {
-            /* 폭 500px */
-            width: 500px;
-            /* 높이 300px */
-            height: 300px;
-            /* 실선 테두리 */
-            border: solid;
-            /* 빨강 테두리 */
-            border-color: #FF0000;
-            /* 폭 10px 테두리 */
-            border-width: 10px;
-        }
-    </style>
-
-    <div>
-        두꺼운 테두리!
-    </div>
+    <div> 두꺼운 테두리! </div>
 </body>
 
 </html>
