--- a/07/border-color2.html
+++ b/07/border-color2.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>외곽선 색상 border-color 2</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
     <style>
         div {
-            /* 폭 500px */
             width: 500px;
-            /* 높이 300px */
             height: 300px;
-            /* 실선 테두리 */
             border: solid;
-            /* 빨강 테두리 */
+            border-width: 10px;
+
+            /* 빨강 테두리 - 색상은 다양하게 적용 가능하다 */
             border-color: rgba(255, 0, 0, 0.3);
             /* 배경색 노랑 */
             background-color: yellow;
-            /* 폭 10px 테두리 */
-            border-width: 10px;
         }
     </style>
+</head>
 
+<body>
     <div>
         두꺼운 테두리!
         빨강과 노랑이 섞여서 주황이 되었다!
