--- a/07/border-direction.html
+++ b/07/border-direction.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>외곽선 방향적용</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
     <style>
         div {
-            /* 폭 100px */
             width: 100px;
-            /* 높이 100px */
             height: 100px;
+            /* 태그기준 4방향(상하좌우)에 선을 적용 할 수 있으며, 각 면에 선에 대한 3종 속성을 모두 선언해야한다.
+            원하는 부분만 선을 적용 할 수 있다. */
+
             /* 초록 점 10px 테두리 */
             border-top: green 10px dotted;
             /* 빨간 실선 10px 테두리 */
@@ -21,10 +20,10 @@
             border-right: yellow 10px dashed;
         }
     </style>
+</head>
 
-    <div>
-
-    </div>
+<body>
+    <div> </div>
 </body>
 
 </html>
