--- a/07/border-radius.html
+++ b/07/border-radius.html
@@ -13,18 +13,28 @@
             width: 100px;
             /* 높이 100px */
             height: 100px;
-            
-            background-color: red; /* 배경색 빨강 */
-            border-radius: 16px; /* 꼭짓점 둥근 정도 16px */
+
+            background-color: red;
+            /* 배경색 빨강 */
+
+            /* border-radius: 16px; */
+            /* 꼭짓점 둥근 정도 16px */
 
             /* background-color: aquamarine; 원 요소 배경색 */
-            /* border-radius: 50%; 꼭짓점 둥근 정도가 50% 넘어가면 원 */
-            /* overflow: hidden; 요소 밖으로 콘텐츠가 나가면 숨겨지도록 설정 */
+            border-radius: 50%;
+            /* 꼭짓점 둥근 정도가 50% 넘어가면 원 */
+
+
+
+            /* 요소 밖으로 콘텐츠가 나가면 숨겨지도록 설정 */
+            overflow: hidden;
+            /* background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8WItI9J1fZMehGGU2RCKXlWdZC_OEhW7g6g&s); */
+            /* 자식은 부모를 뚫고 나가지만, 백그라운드 속성에 사용된 리소스는 자동으로 잘림 */
         }
     </style>
 
     <div>
-        <!-- 안녕하세요! -->
+        안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!
     </div>
 </body>
 
