--- a/07/border-width.html
+++ b/07/border-width.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>외곽선 두께 border-width</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
     <style>
         div {
-            /* 폭 500px */
             width: 500px;
-            /* 높이 300px */
             height: 300px;
-            /* 회색 실선 테두리 */
+
             border: gray solid;
             /* 폭 10px 테두리 */
             border-width: 10px;
         }
     </style>
+</head>
 
-    <div>
-
-    </div>
+<body>
+    <div> </div>
 </body>
 
 </html>
