--- a/07/border.html
+++ b/07/border.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>외곽선 선언 기본값</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <style>
+        div {
+            width: 500px;
+            height: 300px;
+            border: red solid 1px;
+            /* 빨간색 실선 폭 1px 테두리 */
+        }
+    </style>
 </head>
 
 <body>
-    <style>
-        div {
-            /* 폭 500px */
-            width: 500px;
-            /* 높이 300px */
-            height: 300px;
-             border: red solid 1px; /* 빨간색 실선 폭 1px 테두리 */
-        }
-    </style>
-
-    <div>
-
-    </div>
+    <div> </div>
 </body>
 
 </html>
