여백의 모든것 padding, margin.  모서리 굴리기, box-sizing

--- a/07/border-radius.html
+++ b/07/border-radius.html
@@ -1,38 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>모서리 굴리기 border-radius</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="/07/css/border-radius.css">
 </head>
 
 <body>
-    <style>
-        div {
-            /* 폭 100px */
-            width: 100px;
-            /* 높이 100px */
-            height: 100px;
-
-            background-color: red;
-            /* 배경색 빨강 */
-
-            /* border-radius: 16px; */
-            /* 꼭짓점 둥근 정도 16px */
-
-            /* background-color: aquamarine; 원 요소 배경색 */
-            border-radius: 50%;
-            /* 꼭짓점 둥근 정도가 50% 넘어가면 원 */
-
-
-
-            /* 요소 밖으로 콘텐츠가 나가면 숨겨지도록 설정 */
-            overflow: hidden;
-            /* background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8WItI9J1fZMehGGU2RCKXlWdZC_OEhW7g6g&s); */
-            /* 자식은 부모를 뚫고 나가지만, 백그라운드 속성에 사용된 리소스는 자동으로 잘림 */
-        }
-    </style>
-
+    <!-- 피그마에 원의 개념과 border-radius와의 관계 정리 해놓음 -->
     <div>
         안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!안녕하세요!
     </div>
