--- a/07/margin-left.html
+++ b/07/margin-left.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>방향지정하여 바깥여백 지정하기</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <style>
+        div {
+            width: 100px;
+            height: 100px;
+            background-color: antiquewhite;
+
+            /* 원하는 네 방향을 지정하여 바깥 여백 지정 가능 */
+            margin-left: 16px;
+            /* margin: 0 0 0 16px; */
+        }
+    </style>
 </head>
 
 <body>
-    <style>
-        div {
-            /* 100px 정사각형 */
-            width: 100px;
-            height: 100px;
-
-            /* 왼쪽 겉 여백 16px */
-            margin-left: 16px;
-            /* 배경색 */
-            background-color: antiquewhite;
-        }
-    </style>
 
     <div>
         왼쪽에 겉 여백 추가!
