--- a/07/margin.html
+++ b/07/margin.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>네방향 바깥여백 지정하기</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
     <style>
         body {
             /* 겉 여백 제거 */
             margin: 0;
+            /* margin: 0 0 0 0;  */
         }
     </style>
+</head>
 
-    <div>
-        웹 개발에서 여백은 정말 중요해요.
-    </div>
+<body>
+    <div> 웹 개발에서 여백은 정말 중요해요. </div>
 </body>
 
 </html>
