--- a/07/margin7.html
+++ b/07/margin7.html
@@ -1,45 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>마진겹침 1</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
     <style>
         h1 {
-            /* 100px 정사각형 */
             width: 100px;
             height: 100px;
+            background-color: aquamarine;
 
             /* 하단 겉 여백 10px */
             margin-bottom: 10px;
-
-            /* 배경색 */
-            background-color: aquamarine;
         }
 
         h2 {
-            /* 100px 정사각형 */
             width: 100px;
             height: 100px;
+            background-color: antiquewhite;
 
             /* 상단 겉 여백 10px */
             margin-top: 10px;
-
-            /* 배경색 */
-            background-color: antiquewhite;
         }
     </style>
+</head>
 
-    <h1>
-
-    </h1>
+<body>
+    <h1>타이틀1</h1>
     <!-- 둘은 20px이 아닌 10px 만큼 떨어져요! -->
-    <h2>
-
-    </h2>
+    <h2>타이틀2</h2>
 </body>
 
 </html>
