--- a/07/padding-left.html
+++ b/07/padding-left.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>방향지정하여 안쪽여백 지정하기</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <style>
+        div {
+            width: 100px;
+            height: 100px;
+            background-color: aquamarine;
+            /* 원하는 네 방향을 지정하여 안쪽 여백 지정 가능 */
+            padding-left: 16px;
+            /* padding: 0 0 0 16px; */
+        }
+    </style>
 </head>
 
 <body>
-    <style>
-        div {
-            /* 폭 100px */
-            width: 100px;
-            /* 높이 100px */
-            height: 100px;
-            /* 배경색 */
-            background-color: aquamarine;
-
-            padding-left: 16px;
-        }
-    </style>
-
     <div>
-        <span>
-            왼쪽에 속 여백이 있습니다!
-        </span>
+        <span> 왼쪽에 속 여백이 있습니다! </span>
     </div>
 </body>
 
