--- a/07/padding.html
+++ b/07/padding.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>네방향 안쪽여백 지정하기</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <style>
+        div {
+            width: 100px;
+            height: 100px;
+            background-color: aquamarine;
+
+            padding: 16px;
+            /* padding: 16px 16px 16px 16px; */
+        }
+    </style>
 </head>
 
 <body>
-    <style>
-        div {
-            /* 폭 100px */
-            width: 100px;
-            /* 높이 100px */
-            height: 100px;
-            /* 배경색 */
-            background-color: aquamarine;
-            padding: 16px;
-        }
-    </style>
-
     <div>
-        <span>
-            span은 아무 스타일도 없습니다.
-        </span>
+        <span> span은 아무 스타일도 없습니다. </span>
     </div>
 </body>
 
