--- a/07/margin2.html
+++ b/07/margin2.html
@@ -1,34 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>바깥여백 제거, 초기화</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
     <style>
         h1 {
             /* h1 은 기본적으로 겉 여백을 갖고 있습니다. */
             /* 겉 여백 제거 */
             margin: 0;
-            /* 배경색 */
             background-color: aqua;
         }
 
         div {
             margin-top: 16px;
-            /* 배경색 */
             background-color: antiquewhite;
         }
     </style>
+</head>
 
-    <h1>
-        기존 여백이 제거되었습니다.
-    </h1>
-    <div>
-        위 요소랑 16px 만큼 떨어질래요!
-    </div>
+<body>
+    <h1> 기존 여백이 제거되었습니다. </h1>
+    <div> 위 요소랑 16px 만큼 떨어질래요! </div>
 </body>
 
 </html>
