--- a/07/margin3.html
+++ b/07/margin3.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>방향지정하여 바깥여백 지정하기 2</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
     <style>
         div {
             background-color: antiquewhite;
         }
 
         h1 {
-            /* 100px 정사각형 */
             width: 100px;
             height: 100px;
+            background-color: aquamarine;
 
             /* 시계 방향으로 상단 오른쪽 왼쪽 하단 */
             margin: 100px 8px 32px 64px;
-
-            /* 배경색 */
-            background-color: aquamarine;
+            /* margin-top: 100px;
+            margin-right: 8px;
+            margin-bottom: 32px;
+            margin-left: 64px; */
         }
     </style>
+</head>
 
+<body>
     <div>
         H1 전
-        <h1>
-
-        </h1>
+        <h1>타이틀</h1>
         H1 후
     </div>
 </body>
