--- a/07/margin5.html
+++ b/07/margin5.html
@@ -1,35 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>margin 축약작성법 2</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
     <style>
         div {
             background-color: antiquewhite;
         }
 
         h1 {
-            /* 100px 정사각형 */
             width: 100px;
             height: 100px;
+            background-color: aquamarine;
 
             /* 2개일 경우, "상하", "좌우"로 추가되는 여백  */
             margin: 100px 32px;
-
-            /* 배경색 */
-            background-color: aquamarine;
         }
     </style>
+</head>
 
+<body>
     <div>
         H1 전
-        <h1>
-
-        </h1>
+        <h1>타이틀</h1>
         H1 후
     </div>
 </body>
