박스쉐도우와 셀렉터 기초

--- a/07/box-shadow.html
+++ b/07/box-shadow.html
@@ -1,35 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>태그에 그림자 넣기 box-shadow</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="/07/css/box-shadow.css">
 </head>
 
 <body>
     <style>
-        div {
-            /* 150px 정사각형 */
-            width: 150px;
-            height: 150px;
 
-            /* margin: 32px; */
-            margin: 64px;
-
-            /* 배경색 */
-            background-color: aquamarine;
-
-             box-shadow: 16px 16px darkblue; /* 기본 상자 그림자  */
-            /* box-shadow: 16px 16px rgba(0, 0, 0, 0.5); 상자 그림자 투명 검은색*/
-            /* box-shadow: 16px 16px 8px rgba(0, 0, 0, 0.5); 상자 그림자 투명 검은색 흐리게 */
-            /* box-shadow: 16px 16px 8px 32px rgba(0, 0, 0, 0.5); 상자 그림자 투명 검은색 32px만큼 확장 */
-            /* box-shadow: 16px 16px 8px 32px rgba(0, 0, 0, 0.5), 0px 0px 4px 32px red; 투명한 검정 그림자와 빨강 그림자 */
-        }
     </style>
+    <h1>그림자</h1>
+    <section>
+        <h2>그림자 샘플</h2>
+        <div>
+            그림자
+        </div>
+    </section>
 
-    <div>
-        그림자
-    </div>
+    <section>
+        <h2>도전 ! 그림자 4개 깔기 - box-shadow의 5가지 속성을 가지고 5셋트를 깔아보자 ! 디자인감각을 살리면 더욱 베스트 !</h2>
+        <p>그림자로 표현하는 몬드리안</p>
+    </section>
 </body>
 
 </html>
