--- a/08/idselector2.html
+++ b/08/idselector2.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>아이디 선택자의 css 표기법</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
     <style>
         /* 아이디 선택자 */
         #blueBox {
@@ -34,6 +32,9 @@
             background-color: red;
         }
     </style>
+</head>
+
+<body>
 
     <div id="blueBox">
         Blue Box
