--- a/08/universalselector.html
+++ b/08/universalselector.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>해당문서에서 모든 요소를 가르키는 전체선택자</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
     <style>
         /* 전체 선택자 */
         * {
@@ -14,6 +12,9 @@
             color: blueviolet;
         }
     </style>
+</head>
+
+<body>
 
     <div>
         모든 태그가 일괄 적용
