--- a/08/idselector.html
+++ b/08/idselector.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>문서에서 유일하게 쓰는 아이디 선택자</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
@@ -10,6 +11,12 @@
     <div id="box">
         내 아이디는 box!
     </div>
+    <div id="box">
+        내 아이디는 box!
+    </div>
+    <!-- body내에 같은 이름을 쓰는 id는 1번만 사용가능하다. 실수든 의도든 여러개를 사용시 오류 출력되고, 대소문자를 구분한다. -->
+
+    <!-- 개발자랑 협업 때 퍼블리셔가 의미없이 id값을 남발할 시 기능 삽입에서 문제가 생길 수 있다. 레이아웃용 css는 class에 선언하자. -->
 
     <div id="Box">
         내 아이디는 Box!
