--- a/08/pseudoclass_hover.html
+++ b/08/pseudoclass_hover.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>의사선택자 :hover, 마우스를 올린 상태 </title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
     <style>
         /* 클래스 선택자에 가상 클래스 추가 */
-
         .colorful-box {
-            /* 정사각형 */
             width: 100px;
             height: 100px;
-
             /* 빨강 배경색 */
             background-color: red;
         }
@@ -25,10 +20,10 @@
             background-color: blue;
         }
     </style>
+</head>
 
-    <div class="colorful-box">
-
-    </div>
+<body>
+    <div class="colorful-box"> </div>
 </body>
 
 </html>
