:focus와 :nth-child(n), :nth-of-type(n)

--- a/08/nth-child.html
+++ b/08/nth-child.html
@@ -1,27 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>n번째 요소를 세는 선택자 :nth-child(n)</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="/08/css/nth-child.css">
 </head>
 
 <body>
-    <style>
-        /* 정사각형 */
-        .box {
-            width: 150px;
-            height: 150px;
-            border: 2px solid blue;
-        }
-
-        /* 2번째 자식 */
-        .box:nth-child(2) {
-            background-color: red;
-        }
-    </style>
-
-    <div>
+    <div class="sec">
+        <div class="box"> 딴집첫 번째 상자 </div>
+    </div>
+    <div class="sec">
         <div class="box">
             첫 번째 상자
         </div>
