--- a/08/nth-child2.html
+++ b/08/nth-child2.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>n번째 요소를 세는 선택자 :nth-child(n)</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
     <style>
         /* 정사각형 */
         .box {
@@ -15,17 +13,14 @@
             border: 2px solid blue;
         }
     </style>
+</head>
 
+<body>
     <div>
-        <div class="box">
-            첫 번째 상자
-        </div>
-        <div class="box">
-            두 번째 상자
-        </div>
-        <div class="box">
-            세 번째 상자
-        </div>
+        <!-- 모든 요소에 외곽선이 적용되어 겹치는 부분이 두꺼워 진다면?  -->
+        <div class="box"> 첫 번째 상자 </div>
+        <div class="box"> 두 번째 상자 </div>
+        <div class="box"> 세 번째 상자 </div>
     </div>
 </body>
 
