--- a/08/pseudoclass_focus2.html
+++ b/08/pseudoclass_focus2.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>모든 요소에 포커스를 일괄적용하기</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
     <style>
         /* 전체 선택자 + focus 가상 클래스 */
         *:focus {
             box-shadow: 0px 0px 0px 4px red;
         }
     </style>
+</head>
 
+<body>
     <input>
     <input>
-    <button>
-        버튼
-    </button>
+    <button> 버튼 </button>
 </body>
 
 </html>
