--- a/08/pseudoclass_active2.html
+++ b/08/pseudoclass_active2.html
@@ -6,7 +6,7 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <style>
-        /* 클래스선택자:의사선택자active */
+        /* 클래스선택자:의사클래스active */
         .click:active {
             background-color: aqua;
         }
