--- a/08/pseudoclass_active.html
+++ b/08/pseudoclass_active.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 
 <head>
-    <title>의사선택자 :active, 누르고 있는 상태 </title>
+    <title>의사클래스 :active, 누르고 있는 상태 </title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <style>
