--- a/08/pseudoclass_hover.html
+++ b/08/pseudoclass_hover.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 
 <head>
-    <title>의사선택자 :hover, 마우스를 올린 상태 </title>
+    <title>의사클래스 :hover, 마우스를 올린 상태 </title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <style>
