8단원 결합자의종류

--- a/08/combinators_adjacentsibling.html
+++ b/08/combinators_adjacentsibling.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>형제 인접 결합자 +</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
     <style>
         /* a 클래스 바로 뒤에 오는 b 클래스 */
         .a+.b {
             background-color: red;
         }
     </style>
+</head>
+
+<body>
 
     <div class="a">
         a 클래스
