--- a/08/combinators_descendant.html
+++ b/08/combinators_descendant.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>내밑으로 몽땅 자손 결합자 띄어쓰기</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
-
-<body>
     <style>
         /* form-wr 클래스의 자식 중 label */
         .form-wr>label {
@@ -24,6 +22,9 @@
             color: red;
         }
     </style>
+</head>
+
+<body>
 
     <div class="form-wr">
         <label>
