9단원 flexbox의 기초와 justify-content

--- a/09/display_flex-direction.html
+++ b/09/display_flex-direction.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>flex 나열 방향 지정</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="/09/css/display_flex-direction.css">
 </head>
 
 <body>
