--- a/09/display_flex.html
+++ b/09/display_flex.html
@@ -25,32 +25,16 @@
     어떤점이 다른걸까? inline-flex 부모가 나란히 있을때
     그 상위 레이아웃에서 확인 가능하다.-->
     <div class="flex">
-        <div>
-            플렉스
-        </div>
-        <div>
-            박스는
-        </div>
-        <div>
-            인라인 보다
-        </div>
-        <div>
-            좋다!
-        </div>
+        <div> 플렉스 </div>
+        <div> 박스는 </div>
+        <div> 인라인 보다 </div>
+        <div> 좋다! </div>
     </div>
     <!-- <div class="flex">
-        <div>
-            플렉스
-        </div>
-        <div>
-            박스는
-        </div>
-        <div>
-            인라인 보다
-        </div>
-        <div>
-            좋다!
-        </div>
+        <div> 플렉스 </div>
+        <div> 박스는 </div>
+        <div> 인라인 보다 </div>
+        <div> 좋다! </div>
     </div> -->
 </body>
 
