--- a/09/display_flex_align-items2.html
+++ b/09/display_flex_align-items2.html
@@ -1,55 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
+    <title>부모의 높이를 기준으로 세로정렬 지정 align-items 2</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="/09/css/display_flex_align-items2.css">
 </head>
 
 <body>
-    <style>
-        /* 플렉스 박스 */
-        .flex {
-            display: flex;
-            border: solid 1px black;
-            padding: 16px;
-            background-color: aquamarine;
-
-            /* 높이 200px */
-            height: 200px;
-
-            /* 겉 여백 */
-            margin-bottom: 16px;
-        }
-
-        .flex-space-between {
-            /* 아이템끼리 최대한 거리 두기 */
-            justify-content: space-between;
-        }
-
-        .flex>div {
-            /* 보라 배경색 */
-            background-color: blueviolet;
-            color: white;
-
-            /* 높이 설정 */
-            height: 100px;
-
-            /* 테두리 */
-            border: solid 1px black;
-        }
-    </style>
-
     <div class="flex flex-space-between">
-        <div>
-            최대한
-        </div>
-        <div>
-            떨어진
-        </div>
-        <div>
-            요소
-        </div>
+        <div> 최대한 </div>
+        <div> 떨어진 </div>
+        <div> 요소 </div>
     </div>
 </body>
 
